--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Complete Responsive Grocery Website Design Tutorial</title>
+    <title>AlienStore</title>
 
     <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
 
@@ -21,14 +21,14 @@
 
 <header class="header">
 
-    <a href="#" class="logo"> <i class="fas fa-shopping-basket"></i> groco </a>
+    <a href="#" class="logo">AlienStore </a>
 
     <nav class="navbar">
-        <a href="#home">home</a>
-        <a href="#features">features</a>
-        <a href="#products">products</a>
-        <a href="#categories">categories</a>
-        <a href="#review">review</a>
+        <a href="#home">Inicio</a>
+        <a href="#features">Galeria</a>
+        <a href="#products">Lo más vendido</a>
+        <a href="#categories">Diseños</a>
+        <a href="#review">Nuestros Clientes</a>
         <a href="#blogs">blogs</a>
     </nav>
 
@@ -94,9 +94,9 @@
 <section class="home" id="home">
 
     <div class="content">
-        <h3>fresh and <span>organic</span> products for your</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam libero nostrum veniam facere tempore nisi.</p>
-        <a href="#" class="btn">shop now</a>
+        <h3>Diseños    <span>originales    </span>para todos</h3>
+        <br><br><br><br>
+        <a href="#" class="btn">E X P L O R A</a>
     </div>
 
 </section>
@@ -107,29 +107,26 @@
 
 <section class="features" id="features">
 
-    <h1 class="heading"> our <span>features</span> </h1>
+    <h1 class="heading"> Más <span>Vendido</span> </h1>
 
     <div class="box-container">
 
         <div class="box">
-            <img src="image/feature-img-1.png" alt="">
-            <h3>fresh and organic</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt, earum!</p>
-            <a href="#" class="btn">read more</a>
+            <img src="https://user-images.githubusercontent.com/65374030/145650976-971c8106-52ba-4fd7-bd11-bcd464814e07.png" alt="">
+            <p></p>
+            <a href="#" class="btn">₡ 15 000</a>
         </div>
 
         <div class="box">
-            <img src="image/feature-img-2.png" alt="">
-            <h3>free delivery</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt, earum!</p>
-            <a href="#" class="btn">read more</a>
+            <img src="https://user-images.githubusercontent.com/65374030/145650975-bcf1bdb8-1291-4d20-9795-7fc64e8fe766.png" alt="">
+            <p></p>
+            <a href="#" class="btn">₡ 15 000</a>
         </div>
 
         <div class="box">
-            <img src="image/feature-img-3.png" alt="">
-            <h3>easy payments</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt, earum!</p>
-            <a href="#" class="btn">read more</a>
+            <img src="https://user-images.githubusercontent.com/65374030/145650977-69af065a-baac-43f3-ba5d-bff2451ea0d1.png" alt="">
+            <p></p>
+            <a href="#" class="btn">₡ 15 000</a>
         </div>
 
     </div>
@@ -142,16 +139,14 @@
 
 <section class="products" id="products">
 
-    <h1 class="heading"> our <span>products</span> </h1>
+    <h1 class="heading"> Nuestros <span>Diseños</span> </h1>
 
     <div class="swiper product-slider">
 
         <div class="swiper-wrapper">
 
             <div class="swiper-slide box">
-                <img src="image/product-1.png" alt="">
-                <h3>fresh orange</h3>
-                <div class="price"> $4.99/- - 10.99/- </div>
+                <img src="https://user-images.githubusercontent.com/65374030/145650973-e79da72a-4686-4196-b19b-3e39ebe2fb34.jpeg" alt=""> 
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -159,13 +154,11 @@
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star-half-alt"></i>
                 </div>
-                <a href="#" class="btn">add to cart</a>
+                <a href="#" class="btn">Explora la Galeria</a>
             </div>
 
             <div class="swiper-slide box">
-                <img src="image/product-2.png" alt="">
-                <h3>fresh onion</h3>
-                <div class="price"> $4.99/- - 10.99/- </div>
+                <img src="https://user-images.githubusercontent.com/65374030/145650962-fb278337-580e-430c-9f18-7845d511f89d.jpeg" alt="">
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -173,13 +166,11 @@
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star-half-alt"></i>
                 </div>
-                <a href="#" class="btn">add to cart</a>
+                <a href="#" class="btn">Explora la Galeria</a>
             </div>
 
             <div class="swiper-slide box">
-                <img src="image/product-3.png" alt="">
-                <h3>fresh meat</h3>
-                <div class="price"> $4.99/- - 10.99/- </div>
+                <img src="https://user-images.githubusercontent.com/65374030/145650970-8bba8403-98fb-4712-9637-77263cb70486.jpeg" alt="">
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -187,13 +178,11 @@
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star-half-alt"></i>
                 </div>
-                <a href="#" class="btn">add to cart</a>
+                <a href="#" class="btn">Explora la Galeria</a>
             </div>
 
             <div class="swiper-slide box">
-                <img src="image/product-4.png" alt="">
-                <h3>fresh cabbage</h3>
-                <div class="price"> $4.99/- - 10.99/- </div>
+                <img src="https://user-images.githubusercontent.com/65374030/145650979-0ac83b0d-79d8-4631-b3f6-948648d68aae.jpeg" alt="">
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -201,7 +190,7 @@
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star-half-alt"></i>
                 </div>
-                <a href="#" class="btn">add to cart</a>
+                <a href="#" class="btn">Explora la Galeria</a>
             </div>
 
         </div>
@@ -213,9 +202,7 @@
         <div class="swiper-wrapper">
 
             <div class="swiper-slide box">
-                <img src="image/product-5.png" alt="">
-                <h3>fresh potato</h3>
-                <div class="price"> $4.99/- - 10.99/- </div>
+                <img src="https://user-images.githubusercontent.com/65374030/145650981-97192fd3-b035-4b22-85f3-a25519d41bde.jpeg" alt="">
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -223,13 +210,11 @@
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star-half-alt"></i>
                 </div>
-                <a href="#" class="btn">add to cart</a>
+                <a href="#" class="btn">Explora la Galeria</a>
             </div>
 
             <div class="swiper-slide box">
-                <img src="image/product-6.png" alt="">
-                <h3>fresh avocado</h3>
-                <div class="price"> $4.99/- - 10.99/- </div>
+                <img src="https://user-images.githubusercontent.com/65374030/145650988-7e379082-c085-422c-859e-9fc80c186fa3.jpeg" alt="">
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -237,13 +222,11 @@
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star-half-alt"></i>
                 </div>
-                <a href="#" class="btn">add to cart</a>
+                <a href="#" class="btn">Explora la Galeria</a>
             </div>
 
             <div class="swiper-slide box">
-                <img src="image/product-7.png" alt="">
-                <h3>fresh carrot</h3>
-                <div class="price"> $4.99/- - 10.99/- </div>
+                <img src="https://user-images.githubusercontent.com/65374030/145650993-89977c91-33be-4425-ba37-5c2884cc321a.jpeg" alt="">
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -251,13 +234,11 @@
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star-half-alt"></i>
                 </div>
-                <a href="#" class="btn">add to cart</a>
+                <a href="#" class="btn">Explora la Galeria</a>
             </div>
 
             <div class="swiper-slide box">
-                <img src="image/product-8.png" alt="">
-                <h3>green lemon</h3>
-                <div class="price"> $4.99/- - 10.99/- </div>
+                <img src="https://user-images.githubusercontent.com/65374030/145650992-73cfdc12-4bc9-4795-b7b0-36c173405437.jpeg" alt="">
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -265,7 +246,7 @@
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star-half-alt"></i>
                 </div>
-                <a href="#" class="btn">add to cart</a>
+                <a href="#" class="btn">Explora la Galeria</a>
             </div>
 
         </div>
@@ -281,36 +262,36 @@
 
 <section class="categories" id="categories">
 
-    <h1 class="heading"> product <span>categories</span> </h1>
+    <h1 class="heading"> Nuestros<span> Productos</span> </h1>
 
     <div class="box-container">
 
         <div class="box">
-            <img src="image/cat-1.png" alt="">
-            <h3>vegitables</h3>
-            <p>upto 45% off</p>
-            <a href="#" class="btn">shop now</a>
+            <img src="https://user-images.githubusercontent.com/65374030/145658154-4d327c26-e1c6-4c2f-8a7b-dc6e94a17c37.png" alt="">
+            <h3>Camisas</h3>
+            <p>45% de descuento</p>
+            <a href="#" class="btn">Tienda</a>
         </div>
 
         <div class="box">
-            <img src="image/cat-2.png" alt="">
-            <h3>fresh fruits</h3>
-            <p>upto 45% off</p>
-            <a href="#" class="btn">shop now</a>
+            <img src="https://user-images.githubusercontent.com/65374030/145658155-8e051616-0169-4bde-ad96-2f6166fdb594.jpg" alt="">
+            <h3>Canguros</h3>
+            <p>45% de descuento</p>
+            <a href="#" class="btn">Tienda</a>
         </div>
 
         <div class="box">
-            <img src="image/cat-3.png" alt="">
-            <h3>dairy products</h3>
-            <p>upto 45% off</p>
-            <a href="#" class="btn">shop now</a>
+            <img src="https://user-images.githubusercontent.com/65374030/145658157-aaa7d4b2-7048-4ae9-8509-b48c9bc156ee.jpg" alt="">
+            <h3>Gorras</h3>
+            <p>45% de descuento</p>
+            <a href="#" class="btn">Tienda</a>
         </div>
-
+        
         <div class="box">
-            <img src="image/cat-4.png" alt="">
-            <h3>fresh meat</h3>
-            <p>upto 45% off</p>
-            <a href="#" class="btn">shop now</a>
+            <img src="https://user-images.githubusercontent.com/65374030/145658158-b242e8fc-8499-4cd2-9109-3561d729663b.jpg" alt="">
+            <h3>Suetas</h3>
+            <p>45% de descuento</p>
+            <a href="#" class="btn">Tienda</a>
         </div>
 
     </div>
@@ -323,16 +304,16 @@
 
 <section class="review" id="review">
 
-    <h1 class="heading"> customer's <span>review</span> </h1>
+    <h1 class="heading"> Lo que opinan nuestros <span>clientes</span> </h1>
 
     <div class="swiper review-slider">
 
         <div class="swiper-wrapper">
 
             <div class="swiper-slide box">
-                <img src="image/pic-1.png" alt="">
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde sunt fugiat dolore ipsum id est maxime ad tempore quasi tenetur.</p>
-                <h3>john deo</h3>
+                <img src="https://user-images.githubusercontent.com/65374030/145658626-de05c688-1514-4a36-9d41-0e7aed17b4fc.png" alt="">
+                <p>Son muy puntuales, 10 de 10 en servicio al cliente.</p>
+                <h3>Pablo Alba</h3>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -343,9 +324,9 @@
             </div>
 
             <div class="swiper-slide box">
-                <img src="image/pic-2.png" alt="">
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde sunt fugiat dolore ipsum id est maxime ad tempore quasi tenetur.</p>
-                <h3>john deo</h3>
+                <img src="https://user-images.githubusercontent.com/65374030/145658628-367dacab-69d2-474e-9ba6-fc2e94b695e6.png" alt="">
+                <p>Tienen diseños increibles que no se encuentran en ningún otro lado.</p>
+                <h3>Walter Martinez</h3>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -356,9 +337,9 @@
             </div>
 
             <div class="swiper-slide box">
-                <img src="image/pic-3.png" alt="">
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde sunt fugiat dolore ipsum id est maxime ad tempore quasi tenetur.</p>
-                <h3>john deo</h3>
+                <img src="https://user-images.githubusercontent.com/65374030/145658623-d91137d2-99ff-43ff-bac8-a10494bc80e8.png" alt="">
+                <p>Productos de alta calidad, muy satisfecho</p>
+                <h3>Marta Campos</h3>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -369,9 +350,9 @@
             </div>
 
             <div class="swiper-slide box">
-                <img src="image/pic-4.png" alt="">
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde sunt fugiat dolore ipsum id est maxime ad tempore quasi tenetur.</p>
-                <h3>john deo</h3>
+                <img src="https://user-images.githubusercontent.com/65374030/145658627-efde1b07-290f-4de5-a950-f88e66d1c24a.png" alt="">
+                <p>Precios muy cómodos para contenido tan original.</p>
+                <h3>Ainara Corrales</h3>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -446,7 +427,8 @@
 
 <section class="footer">
 
-    <div class="box-container">
+    <div class="box-container"> 
+        
 
         <div class="box">
             <h3> groco <i class="fas fa-shopping-basket"></i> </h3>
