--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
 
     </div>
 
-    <div class="credit"> created by <span> mr. web designer </span> | all rights reserved </div>
+    <div class="credit"> created by <span> Web Creators </span> | all rights reserved </div>
 
 </section>
 
