--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
               <div class="templatemo_contacttitle"></div>
                <div class="templatemo_sub_contacttitle"></p>
            
-              <form action="enviar.php" method="post">
+              <form action="enviar.php" method="POST">
                                    <input type="text" name="name" id="name" class="name" placeholder="NOMBRE">
                                    <input type="text" name="mail" id="mail" class="email" placeholder="CORREO">
                                    <input type="text" name="phone" id="subject" class="subject" placeholder="TELÉFONO">
