--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
          <a href="galeria.html">Galeria</a> <!--features-->
          <a href="tienda.html">Tienda</a>
          <a href="#opinion clientes">Opinión de Clientes</a>
-         <a href="#quienes somos">Quiénes Somos?</a>
+         <a href="#quienes somos">¿Quiénes Somos?</a>
          
       </nav>
 
@@ -117,37 +117,37 @@
         <div class="box">
             <img src="https://user-images.githubusercontent.com/65374030/145650963-d6372c10-a840-4b3c-9624-f82e05d0b533.jpeg" alt="abduccion">
             <p>Código A-1</p>
-            <a href="#" class="btn">Explora más diseños</a>
+            <a href="galeria.html" class="btn">Explora más diseños</a>
         </div>
 
         <div class="box">
             <img src="https://user-images.githubusercontent.com/65374030/145650965-c9eded29-63e3-4b9d-9a17-282c10cb654a.jpeg" alt="ovni">
             <p>Código A-2</p>
-            <a href="#" class="btn">Explora más diseños</a>
+            <a href="galeria.html" class="btn">Explora más diseños</a>
         </div>
 
         <div class="box">
             <img src="https://user-images.githubusercontent.com/65374030/145650970-8bba8403-98fb-4712-9637-77263cb70486.jpeg" alt="alien covid">
             <p>Código A-3</p>
-             <a href="#" class="btn">Explora más diseños</a>
+             <a href="galeria.html" class="btn">Explora más diseños</a>
         </div>
 
         <div class="box">
             <img src="https://user-images.githubusercontent.com/65374030/145650973-e79da72a-4686-4196-b19b-3e39ebe2fb34.jpeg" alt="laboratorio alien">
             <p>Código A-4</p>
-            <a href="#" class="btn">Explora más diseños</a>
+            <a href="galeria.html" class="btn">Explora más diseños</a>
         </div> 
 
         <div class="box">
             <img src="https://user-images.githubusercontent.com/65374030/145650979-0ac83b0d-79d8-4631-b3f6-948648d68aae.jpeg" alt="alien gorra">
             <p>Código A-5</p>
-            <a href="#" class="btn">Explora más diseños</a>
+            <a href="galeria.html" class="btn">Explora más diseños</a>
         </div>
 
         <div class="box">
             <img src="https://user-images.githubusercontent.com/65374030/145650988-7e379082-c085-422c-859e-9fc80c186fa3.jpeg" alt="alien weed">
             <p>Código A-6</p>
-            <a href="#" class="btn">Explora más diseños</a>
+            <a href="galeria.html" class="btn">Explora más diseños</a>
         </div>
 
     </div>
@@ -415,7 +415,7 @@
         <div class="box">
             <h3>Nuestra Informacíon</h3>
             <a href="#" class="links"> <i class="fas fa-phone"></i> 64750002 </a>
-            <a href="#" class="links"> <i class="fas fa-phone"></i> +111-222-3333 </a>
+            <a href="#" class="links"> <i class="fas fa-phone"></i> 22295052 </a>
             <a href="#" class="links"> <i class="fas fa-envelope"></i> giovacrack@gmail.com </a>
             <a href="#" class="links"> <i class="fas fa-map-marker-alt"></i> Coronado, calle la Maquína </a>
         </div>
@@ -438,11 +438,11 @@
               <div class="templatemo_contacttitle"></div>
                <div class="templatemo_sub_contacttitle"></p>
            
-              <form action="enviar.php" method="post">
+              <form action="enviar.php" method="POST">
                                    <input type="text" name="nombre" id="name" class="name" placeholder="NOMBRE">
                                    <input type="text" name="correo" id="mail" class="email" placeholder="CORREO">
                                    <input type="text" name="telefono" id="subject" class="subject" placeholder="TELÉFONO">
-                                   <textarea name="message" class="mensaje" placeholder="MENSAJE ... " id="message"></textarea>
+                                   <textarea name="mensaje" class="message" placeholder="MENSAJE ... " id="message"></textarea>
                                    <div class="clear"></div>
                                        <div class="col-md-8"> 
                                            <button type="submit" class="btn btn-primary">ENVIAR </button>
