--- a/galeria.html
+++ b/galeria.html
@@ -33,11 +33,11 @@
     <img src="https://user-images.githubusercontent.com/65374030/146095991-d6239885-4695-4fb2-adc9-cda37754560b.png" alt="Logo"  class="nav-brand">
     
     <nav class="navbar">
-       <a href="#inicio">Inicio</a> 
+       <a href="index.html">Inicio</a> 
        <a href="galeria.html">Galeria</a> <!--features-->
        <a href="tienda.html">Tienda</a>
        <a href="index.html #opinion clientes">Opinión de Clientes</a>
-       <a href="index.html #quienes somos">Quiénes Somos?</a>
+       <a href="index.html #quienes somos">¿Quiénes Somos?</a>
        
     </nav>
 
@@ -243,7 +243,7 @@
         <div class="box">
             <h3>Nuestra Informacíon</h3>
             <a href="#" class="links"> <i class="fas fa-phone"></i> 64750002 </a>
-            <a href="#" class="links"> <i class="fas fa-phone"></i> +111-222-3333 </a>
+            <a href="#" class="links"> <i class="fas fa-phone"></i> 22295052 </a>
             <a href="#" class="links"> <i class="fas fa-envelope"></i> giovacrack@gmail.com </a>
             <a href="#" class="links"> <i class="fas fa-map-marker-alt"></i> Coronado, calle la Maquína </a>
         </div>
@@ -252,9 +252,9 @@
             <h3>Links Rapídos</h3>
             <a href="#inicio" class="links"> <i class="fas fa-arrow-right"></i> Inicio </a>
             <a href="#features" class="links"> <i class="fas fa-arrow-right"></i> Galería </a>
-            <a href="#productos" class="links"> <i class="fas fa-arrow-right"></i> Nuestos  Diseños</a>
-            <a href="#opinion clientes" class="links"> <i class="fas fa-arrow-right"></i> Opinión de Clientes </a>
-            <a href="#quienes somos" class="links"> <i class="fas fa-arrow-right"></i> ¿Quiénes Somos? </a>
+            <a href="tienda.html" class="links"> <i class="fas fa-arrow-right"></i> Tienda</a>
+            <a href="index.html #opinion clientes" class="links"> <i class="fas fa-arrow-right"></i> Opinión de Clientes </a>
+            <a href="index.html #quienes somos" class="links"> <i class="fas fa-arrow-right"></i> ¿Quiénes Somos? </a>
             </div>
         <section class="formulario">
         <div class="box">
