--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
         <div class="fas fa-bars" id="menu-btn"></div>
         <div class="fas fa-heart" id="search-btn"></div>
         <div class="fas fa-info" id="cart-btn"></div>
-        <div class="fas fa-arrow-circle-up" id="login-btn"></div>
+        <a href="#inicio"><div class="fas fa-arrow-circle-up" id="login-btn"></div></a>
      </div>
 
     <form action="" class="search-form">
-        <input type="search" id="search-box" placeholder="Tu puedes hacer cualquier cosa">
+        <input type="search" id="search-box" placeholder="Te deseamos la mejor vibra 24/7">
         <label for="search-box" class="fas fa-heart"></label>
     </form>
 
@@ -175,7 +175,7 @@
                     <i class="fas fa-star-half-alt"></i>
                 </div> 
                 <br><br>
-                <a href="#" class="btn">₡13 000</a>
+                <a class="btn">₡13 000</a>
             </div>
 
             <div class="swiper-slide box">
@@ -189,7 +189,7 @@
                     <i class="fas fa-star-half-alt"></i>
                 </div> 
                 <br><br>
-                <a href="#" class="btn">₡13 000</a>
+                <a class="btn">₡13 000</a>
             </div>
 
             <div class="swiper-slide box">
@@ -203,7 +203,7 @@
                     <i class="fas fa-star-half-alt"></i>
                 </div> 
                 <br><br>
-                <a href="#" class="btn">₡13 000</a>
+                <a class="btn">₡13 000</a>
             </div>
 
             <div class="swiper-slide box">
@@ -217,7 +217,7 @@
                     <i class="fas fa-star-half-alt"></i>
                 </div>
                 <br><br>
-                <a href="#" class="btn">₡13 000</a>
+                <a class="btn">₡13 000</a>
             </div>
 
         </div>
@@ -239,7 +239,7 @@
                     <i class="fas fa-star-half-alt"></i>
                 </div>
                 <br><br>
-                <a href="#" class="btn">₡13 000</a>
+                <a class="btn">₡13 000</a>
             </div>
 
             <div class="swiper-slide box">
@@ -253,7 +253,7 @@
                     <i class="fas fa-star-half-alt"></i>
                 </div>
                 <br><br>
-                <a href="#" class="btn">₡13 000</a>
+                <a class="btn">₡13 000</a>
             </div>
 
             <div class="swiper-slide box">
@@ -267,7 +267,7 @@
                     <i class="fas fa-star-half-alt"></i>
                 </div>
                 <br><br>
-                <a href="#" class="btn">₡13 000</a>
+                <a class="btn">₡13 000</a>
             </div>
 
             <div class="swiper-slide box">
@@ -281,7 +281,7 @@
                     <i class="fas fa-star-half-alt"></i>
                 </div>
                 <br><br>
-                <a href="#" class="btn">₡13 000</a>
+                <a class="btn">₡13 000</a>
             </div>
 
         </div>
@@ -301,9 +301,9 @@
         <div class="swiper-wrapper">
 
             <div class="swiper-slide box">
-                <img src="https://user-images.githubusercontent.com/65374030/146286343-3363b20e-35db-4245-9c7a-b04aebe2593a.jpg" alt="hombre opina">
+                <img src="https://user-images.githubusercontent.com/65374030/147433528-7c99a7b5-9293-4ab2-a364-21f67e60dd83.jpg" alt="cliente opina">
                 <p>Son muy puntuales, 10 de 10 en servicio al cliente.</p>
-                <h3>Pablo Alba</h3>
+                <h3>Jose</h3>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -314,9 +314,9 @@
             </div>
 
             <div class="swiper-slide box">
-                <img src="https://user-images.githubusercontent.com/65374030/146286339-32e87415-6a93-4316-ae5a-af45134a1e87.jpg" alt="hombre opina">
+                <img src="https://user-images.githubusercontent.com/65374030/147433529-a91f1284-56bf-4468-89eb-e18d8905a8c2.jpg" alt="cliente opina">
                 <p>Tienen diseños increibles que no se encuentran en ningún otro lado.</p>
-                <h3>Walter Martinez</h3>
+                <h3>Andres</h3>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -327,9 +327,9 @@
             </div>
 
             <div class="swiper-slide box">
-                <img src="https://user-images.githubusercontent.com/65374030/145658623-d91137d2-99ff-43ff-bac8-a10494bc80e8.png" alt="mujer opina">
+                <img src="https://user-images.githubusercontent.com/65374030/147433530-1e28642e-8a8d-458d-a9f7-d52e417f46bf.jpg" alt="cliente opina">
                 <p>Productos de alta calidad, muy satisfecho</p>
-                <h3>Marta Chacón</h3>
+                <h3>Giovanni</h3>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -340,9 +340,9 @@
             </div>
 
             <div class="swiper-slide box">
-                <img src="https://user-images.githubusercontent.com/65374030/146286342-945c596b-fea9-4d49-a384-7dfac56a83a2.jpg" alt="mujer opina">
+                <img src="https://user-images.githubusercontent.com/65374030/146286342-945c596b-fea9-4d49-a384-7dfac56a83a2.jpg" alt="cliente opina">
                 <p>Precios muy cómodos para contenido tan original.</p>
-                <h3>Ainara Rodríguez</h3>
+                <h3>Ainara </h3>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -395,7 +395,8 @@
                 <h3>Como Realizar una Compra</h3>
                 <p>Explora por nuestra galería y elige el diseño que más te guste para tu artículo.</p> 
                 <p>También puedes directamente nuestros diseños ya elaborados, loc cuales puedes encontar en la sección de nuestros diseños. </p>
-                <p>Contacta al Whatsapp #456789 o llena el formulario Contactanos con el detalle de tu pedido. </p>
+                <p>Cada logo y camisa tienen un código único que los identifica, a la hora de contactarnos dinos cual código es para mayor facilidad con el pedido.</p>
+                <p>Contacta al Whatsapp 64750002 o llena el formulario Contáctanos con el detalle de tu pedido. </p>
                 
             </div>
         </div>
@@ -414,10 +415,9 @@
 
         <div class="box">
             <h3>Nuestra Informacíon</h3>
-            <a href="#" class="links"> <i class="fas fa-phone"></i> 64750002 </a>
-            <a href="#" class="links"> <i class="fas fa-phone"></i> 22295052 </a>
-            <a href="#" class="links"> <i class="fas fa-envelope"></i> giovacrack@gmail.com </a>
-            <a href="#" class="links"> <i class="fas fa-map-marker-alt"></i> Coronado, calle la Maquína </a>
+            <a class="links"> <i class="fas fa-phone"></i> 64750002 </a>
+            <a class="links"> <i class="fas fa-envelope"></i> giovacrack@gmail.com </a>
+            <a class="links"> <i class="fas fa-map-marker-alt"></i> Coronado, calle la Maquína </a>
         </div>
 
         <div class="box">
@@ -438,7 +438,7 @@
               <div class="templatemo_contacttitle"></div>
                <div class="templatemo_sub_contacttitle"></p>
            
-              <form action="enviar.php" method="POST">
+              <form name="contact" method="POST" data-netlify="true">
                                    <input type="text" name="nombre" id="name" class="name" placeholder="NOMBRE">
                                    <input type="text" name="correo" id="mail" class="email" placeholder="CORREO">
                                    <input type="text" name="telefono" id="subject" class="subject" placeholder="TELÉFONO">
@@ -453,37 +453,25 @@
       </section>
         <div class="box">
             <div class="share">
-                <a href="#" class="fab fa-facebook-f" id="facebook"></a>
-                <a href="#" class="fab fa-instagram" id="instagram"></a>
-                <a href="#" class="fab fa-github" id="github"></a>
+                <a class="fab fa-facebook-f" id="facebook"></a>
+                <a class="fab fa-instagram" id="instagram"></a>
+                <a class="fab fa-github" id="github"></a>
             </div>
         </div>
 
     </div>
 
-    <div class="credit"> Copyright © <span> Web Creators Inc. </span> | all rights reserved </div>
+    <div class="credit"> Copyright © <a href="https://tobikadachi937.github.io/webcreatorsoriginal/" target="_blank"><span> Web Creators Inc. </span></a> | all rights reserved </div>
 
 </section>
 
 <!-- footer section ends -->
 
 
-
-
-
-
-
-
 <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
 
 <!--js file link--> 
 <script src="main.js"></script>
-
-
-
-
-
-
 
 
 </body>
